# precipitation_predictor

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/Bilbao/: historical_climate_data_BILBAO_0.json  historical_climate_data_BILBAO_1.json  historical_climate_data_BILBAO_10.json  historical_climate_data_BILBAO_2.json  historical_climate_data_BILBAO_3.json  historical_climate_data_BILBAO_4.json  historical_climate_data_BILBAO_5.json  historical_climate_data_BILBAO_6.json  historical_climate_data_BILBAO_7.json  historical_climate_data_BILBAO_8.json  historical_climate_data_BILBAO_9.json
data/Madrid/: historical_climate_data_Madrid_1.json  historical_climate_data_Madrid_2.json  historical_climate_data_Madrid_3.json  historical_climate_data_Madrid_4.json  historical_climate_data_Madrid_5.json  historical_climate_data_Madrid_6.json  historical_climate_data_Madrid_7.json
data/Malaga/: historical_climate_data_Malaga_1.json  historical_climate_data_Malaga_2.json  historical_climate_data_Malaga_3.json  historical_climate_data_Malaga_4.json  historical_climate_data_Malaga_5.json  historical_climate_data_Malaga_6.json  historical_climate_data_Malaga_7.json  historical_climate_data_Malaga_8.json
data/SanSebastian/: historical_climate_data_SAN_SEBASTIAN_1.json  historical_climate_data_SAN_SEBASTIAN_2.json  historical_climate_data_SAN_SEBASTIAN_3.json  historical_climate_data_SAN_SEBASTIAN_4.json  historical_climate_data_SAN_SEBASTIAN_6.json
data/Valencia/: historical_climate_data_Valencia_1.json  historical_climate_data_Valencia_2.json  historical_climate_data_Valencia_3.json  (+4 more)
docs/: methodology.md
scripts/: benchmark.sh  export_bilbao_model.sh  extract_aemet_data.sh  import_climate_db.sh  predict_bilbao.sh  predict_bilbao_from_model.sh  visualize_seasonality.sh
tests/: fixtures_data.py  test_climate_db.py  test_config.py  test_integration_inference.py  test_model_bundle.py  test_xgboost_wrapper.py
(+35 files in other folders)
